# domo

./: CLAUDE.md  README.md
v1/backend/: Dockerfile  alembic.ini  pyproject.toml
v1/backend/alembic/: env.py
v1/backend/alembic/versions/: 0001_initial.py  0002_phase1_content.py  0003_phase2_sponsorship.py  0004_phase2_auction.py  0005_phase3_moderation.py  0006_auth_refresh_tokens.py  0007_gdpr.py  0008_media_storage.py  0009_minor_guardian.py  0010_search_logs.py  0011_post_editor_fields.py  0012_collections.py  0013_schools.py  0014_artist_onboarding.py  0015_edu_email.py  0016_escrow_buyer_fee.py  0017_translations.py  0018_bookmarks.py  0019_user_preferences.py  0020_activity_logs.py  0021_kyc.py  0022_settlements.py  0023_communities.py  0024_rewards.py  0025_shipping_tracking.py  0026_live_flag.py  0027_order_refunded_at.py  0028_community_comments.py  0029_user_stripe_customer.py  0030_drop_users_birth_date.py  0031_kyc_status_check.py  0032_admin_credentials.py  0033_admin_recovery_codes.py  0034_webauthn_credentials.py
v1/backend/app/: main.py
v1/backend/app/api/: activity.py  admin.py  admin_auth.py  admin_dashboard.py  admin_webauthn.py  artists.py  auctions.py  auth.py  collections.py  communities.py  guardian.py  kyc.py  legal.py  me.py  media.py  moderation.py  notifications.py  orders.py  posts.py  rankings.py  reports.py  rewards.py  settlements.py  sponsorships.py  users.py  webhooks.py
v1/backend/app/core/: admin_deps.py  config.py  deps.py  errors.py  rate_limit.py  redis_client.py  security.py
v1/backend/scripts/: seed.py  seed_demo.py
(+234 files in other folders)
