[project]
name = "domo-backend"
version = "0.1.0"
description = "Domo prototype backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "redis>=5.2",
    "google-auth>=2.36",
    "requests>=2.32",
    "Pillow>=11.0",
    "aioboto3>=13.2",
    "stripe>=11.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
